testing/tests/ui/macro.stderr
error: the previous template error derives from
 --> tests/ui/macro.rs:4:21
  |
4 |   #[template(source = "{%- macro thrice(param) -%}
  |  _____________________^
5 | | {{ param }}
6 | | {%- endmacro -%}
7 | |
8 | | {%- call thrice(2, 3) -%}", ext = "html")]
  | |__________________________^

error: the previous template error derives from
  --> tests/ui/macro.rs:12:21
   |
12 |   #[template(source = "{%- macro thrice(param, param2) -%}
   |  _____________________^
13 | | {{ param }} {{ param2 }}
14 | | {%- endmacro -%}
15 | |
16 | | {%- call thrice() -%}", ext = "html")]
   | |______________________^

error: the previous template error derives from
  --> tests/ui/macro.rs:20:21
   |
20 |   #[template(source = "{%- macro thrice() -%}
   |  _____________________^
21 | | {%- endmacro -%}
22 | |
23 | | {%- call thrice(1, 2) -%}", ext = "html")]
   | |__________________________^
